--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,8 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentStart="false"
-        android:layout_alignParentEnd="false"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:id="@+id/linearLayout"
         android:padding="50dp"
         android:weightSum="1">
@@ -24,25 +24,25 @@
             android:layout_width="90dp"
             android:layout_height="60dp"
             android:id="@+id/photoFriend"
-            android:padding="30dp" />
+            android:padding="30dp"
+            android:layout_weight="0.5" />
 
         <TextView
-            android:layout_width="125dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Small Text"
             android:id="@+id/NomFriend"
-            android:padding="20dp"
-            android:layout_weight="0.41" />
+            android:padding="30dp"
+            android:layout_weight="1" />
     </LinearLayout>
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/linearLayout"
-        android:layout_alignParentBottom="true" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="93dp"></LinearLayout>
 
 </RelativeLayout>
