--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,36 +13,50 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/linearLayout"
-        android:padding="50dp"
-        android:weightSum="1">
+        android:layout_marginBottom="158dp"
+        android:id="@+id/linearLayout">
 
-        <ImageView
-            android:layout_width="90dp"
-            android:layout_height="60dp"
-            android:id="@+id/photoFriend"
-            android:padding="30dp"
-            android:layout_weight="0.5" />
-
-        <TextView
+        <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Small Text"
-            android:id="@+id/NomFriend"
-            android:padding="30dp"
+            android:text="Evenements"
+            android:id="@+id/button_Events"
+            android:layout_weight="1" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Amis"
+            android:id="@+id/button_Amis"
             android:layout_weight="1" />
     </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="93dp"></LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:padding="20dp"
+        android:weightSum="1">
+
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="match_parent"
+            android:id="@+id/PhotoProfile"
+            android:padding="40dp"
+            android:layout_weight="0.25" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Small Text"
+            android:id="@+id/profilename_text"
+            android:padding="90dp"
+            android:layout_weight="1" />
+    </LinearLayout>
 
 </RelativeLayout>
