--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -33,30 +33,28 @@
             android:layout_weight="1" />
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/profilename_id_text"
+        android:layout_weight="1"
         android:padding="20dp"
-        android:weightSum="1">
+        android:layout_below="@+id/imageView_photoProfile_id"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="false"
+        android:background="#ffffff"
+        android:fontFamily="20"
+        android:textColor="@android:color/black"
+        android:textSize="20dp" />
 
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="match_parent"
-            android:id="@+id/PhotoProfile"
-            android:padding="40dp"
-            android:layout_weight="0.25" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="70dp"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Small Text"
-            android:id="@+id/profilename_text"
-            android:padding="90dp"
-            android:layout_weight="1" />
-    </LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView_photoProfile_id"
+        android:padding="20dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
