--- a/app/src/main/res/layout/rangee_event.xml
+++ b/app/src/main/res/layout/rangee_event.xml
@@ -3,6 +3,11 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:id="@+id/rangee_imageEvent" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -10,10 +15,7 @@
         android:text="Small Text2"
         android:id="@+id/rangee_textEvent"
         android:layout_weight="1"
-        android:padding="21dp" />
-
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:id="@+id/rangee_imageEvent" />
+        android:padding="20dp"
+        android:textColor="@android:color/black"
+        android:textSize="20dp" />
 </LinearLayout>
