--- a/app/src/main/res/layout/rangee_friend.xml
+++ b/app/src/main/res/layout/rangee_friend.xml
@@ -3,6 +3,11 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:id="@+id/photoFriend_id" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -10,10 +15,8 @@
         android:text="Small Text"
         android:id="@+id/rangee_textFriend"
         android:layout_weight="1"
-        android:padding="20dp" />
+        android:padding="20dp"
+        android:textColor="@android:color/black"
+        android:textSize="20dp" />
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:id="@+id/photoFriend" />
 </LinearLayout>
